--- a/8_Spring/spring/src/main/webapp/WEB-INF/web.xml
+++ b/8_Spring/spring/src/main/webapp/WEB-INF/web.xml
@@ -14,19 +14,16 @@
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml
-			</param-value>
+			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -40,12 +37,13 @@
 		수정할 수 있도록 한다. *스프링에서 제공해주는 인코딩 필터 등록!! - org.springframework.web.filter.CharacterEncodingFilter -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter
-		</filter-class>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<!-- 옵션1. 인코딩 방식을 UTF-8 -->
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
 		</init-param>
+		<!-- 옵션2. 충돌이 나더라도 강제로 인코딩 방식을 UTF-8 -->
 		<init-param>
 			<param-name>forceEncoding</param-name>
 			<param-value>true</param-value>
